    criteria which will join via AND, i.e.
    query.filter(x==y, z>q, ...)

  - Fixed regression from 0.6 whereby if 
    "load_on_pending" relationship() flag were used
    where a non-"get()" lazy clause needed to be 
    emitted on a pending object, it would fail 
    to load.

  - [bug] ensure pickleability of all ORM exceptions
    for multiprocessing compatibility. [ticket:2371]

- engine
  - [bug] Added __reduce__ to StatementError, 
    DBAPIError, column errors so that exceptions 
    are pickleable, as when using multiprocessing.  
    However, not 
    all DBAPIs support this yet, such as 
    psycopg2. [ticket:2371]

- sqlite
  - [bug] the "name" of an FK constraint in SQLite
    is reflected as "None", not "0" or other 
    integer value [ticket:2364].
    SQLite does not appear to support constraint
    naming in any case.

- mysql
  - [bug] fixed regexp that filters out warnings
    for non-reflected "PARTITION" directives,
    thanks to George Reilly [ticket:2376]

- Py3K
  - [bug] Fixed inappropriate usage of util.py3k
    flag and renamed it to util.py3k_warning, since 
    this flag is intended to detect the -3 flag
    series of import restrictions only.
    [ticket:2348]

0.7.4
=====
- orm
  - [bug] Fixed backref behavior when "popping" the 
    value off of a many-to-one in response to 
    a removal from a stale one-to-many - the operation
    is skipped, since the many-to-one has since
    been updated.  [ticket:2315]

  - [bug] After some years of not doing this, added
    more granularity to the "is X a parent of Y" 
    functionality, which is used when determining
    if the FK on "Y" needs to be "nulled out" as well
    as if "Y" should be deleted with delete-orphan
    cascade.   The test now takes into account the
    Python identity of the parent as well its identity 
    key, to see if the last known parent of Y is
    definitely X.   If a decision
    can't be made, a StaleDataError is raised.  The