@@ -34,6 +34,7 @@ from sqlalchemy.sql.expression import (
     except_all,
     exists,
     extract,
+    false,
     func,
     insert,
     intersect,
@@ -53,6 +54,7 @@ from sqlalchemy.sql.expression import (
     subquery,
     table,
     text,
+    true,
     tuple_,
     type_coerce,
     union,
